--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.mail.port = 2525
 spring.mail.username = 51c25b2bd12a2e
 spring.mail.password = e2c0f334312142
 spring.mail.protocol = smtp
+
+jwt.expiration.time=90000
